--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -5,5 +5,11 @@
 		<p>
 			<a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
 		</p>
+		<form name="searchAndAddOmniForm">
+			<input type="search" ng-model="item.text">
+			<button ng-click="addNewItem()">
+				+
+			</button>
+		</form>
 	</div>
 </div>
