--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -15,7 +15,7 @@
 						<input type="password" ng-model="user.password" placeholder="Password" required>
 					</dt>
 					<dt>
-						<button ng-disabled="!login.$valid" ng-click="userLogin(user)">
+						<button ng-disabled="!login.$valid" ng-click="userLogin()">
 							login
 						</button>
 					</dt>
