Fixed controller names in unit tests. Directive for new item (task/note).

--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -6,10 +6,11 @@
 			<a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
 		</p>
 		<form name="searchAndAddOmniForm">
-			<input type="search" ng-model="item.text">
+			<input type="search" ng-model="item" autofocus="autofocus">
 			<button ng-click="addNewItem()">
 				+
 			</button>
 		</form>
+		<div new-item></div>
 	</div>
 </div>
