Organized controller into separate files. Improved user login and item request workflow.

--- a/frontend/core/src/main/webapp/static/partials/newItemTemplate.html
+++ b/frontend/core/src/main/webapp/static/partials/newItemTemplate.html
@@ -1,11 +1,13 @@
-<form ng-show="showMe">
-	<p>
-		{{newItem}}
-	</p>
-	<button>
-		task
-	</button>
-	<button>
-		note
-	</button>
-</form>
+<div>
+	<ul>
+		<li ng-repeat="item in items">
+			{{item.title}}
+			<button>
+				task
+			</button>
+			<button>
+				note
+			</button>
+		</li>
+	</ul>
+</div>
