--- a/frontend/core/src/main/webapp/static/partials/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/tasks.html
@@ -1,3 +1,12 @@
-<div ng-repeat="item in tasks">
-	{{item.title}}
+<div class="span12">
+	<!-- Page Content -->
+	<div class="em-core">
+		<h3>extended mind <a href="/" class="em-subtitle">tasks</a></h3>
+		<p>
+			&nbsp;
+		</p>
+		<div ng-repeat="item in tasks">
+			{{item.title}}
+		</div>
+	</div>
 </div>
