--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -6,11 +6,11 @@
 			<a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
 		</p>
 		<form name="searchAndAddOmniForm">
-			<input type="search" ng-model="item" autofocus="autofocus">
-			<button ng-click="addNewItem()">
+			<input type="search" ng-model="itemTitle" autofocus="autofocus">
+			<button ng-click="putItem()">
 				+
 			</button>
 		</form>
-		<div new-item></div>
+		<item-list></item-list>
 	</div>
 </div>
