--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -6,7 +6,7 @@
 			<a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
 		</p>
 		<form name="searchAndAddOmniForm">
-			<input type="search" ng-model="itemTitle" autofocus="autofocus">
+			<input type="search" ng-model="item.title" autofocus="autofocus">
 			<button ng-click="putItem()">
 				+
 			</button>
