Moved templates from ../partials/ into ../partials/templates/. A filter to list users tasks/notes from items. Improved omni bar search and new item creation functionality. Directives for new item's task and note settings. Http get request for user items uses angular cache. Lots of minor architecture changes.

--- a/frontend/core/src/main/webapp/static/partials/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/tasks.html
@@ -5,8 +5,10 @@
 		<p>
 			&nbsp;
 		</p>
-		<div ng-repeat="item in tasks">
-			{{item.title}}
-		</div>
+		<ul>
+			<li ng-repeat="item in items | userItems:filterArgument">
+				{{item.title}}
+			</li>
+		</ul>
 	</div>
 </div>
