--- a/frontend/core/src/main/webapp/static/partials/templates/newItemTemplate.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/newItemTemplate.html
@@ -1,7 +1,7 @@
 <div>
 	<ul>
 		<li ng-repeat="item in newItems">
-			{{item.title}}
+			<span class="done-true">{{item.title}}</span>
 			<div note-edit></div>
 			<div task-edit></div>
 		</li>
