Fixed cookies and sessionStorage usage in user authorization. Using JQuery cookies instead of AngularJS because it is able to set expiration date to cookie. Http backend json mock data is fetched with Jasmine getJsonFixture instead of AngularJS $resource http wrapper. Updated AngularJS sources and cleaned index html files.

--- a/frontend/core/src/main/webapp/static/partials/templates/newItemTemplate.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/newItemTemplate.html
@@ -1,7 +1,7 @@
 <div>
 	<ul>
 		<li ng-repeat="item in newItems">
-			<span class="done-true">{{item.title}}</span>
+			<span class="done-{{todo.done}}">{{item.title}}</span>
 			<div note-edit></div>
 			<div task-edit></div>
 		</li>
