--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -3,14 +3,8 @@
 	<div class="masthead">
 		<h3>extended mind</h3>
 		<p>
-			<a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
+			<a href="/login">login</a>
 		</p>
-		<form name="searchAndAddOmniForm">
-			<input type="search" ng-model="item.title" autofocus="autofocus">
-			<button ng-click="putItem()">
-				+
-			</button>
-		</form>
-		<div item-list></div>
+		<p>wlcm</p>
 	</div>
 </div>
