Improved user authentication code.

--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -9,7 +9,7 @@
 			<form name="login">
 				<dl>
 					<dt>
-						<input type="email" ng-model="user.email" placeholder="Email" required>
+						<input type="email" ng-model="user.username" placeholder="Email" required>
 					</dt>
 					<dt>
 						<input type="password" ng-model="user.password" placeholder="Password" required>
