--- a/frontend/core/src/main/webapp/static/partials/pageNotFound.html
+++ b/frontend/core/src/main/webapp/static/partials/pageNotFound.html
@@ -5,6 +5,6 @@
 		<p>
       <a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
 		</p>
-		<p>wlcm</p>
+		<p>404 Not Found</p>
 	</div>
 </div>
