Moved login logic from app.js to userAuthenticate.js.

--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -3,7 +3,7 @@
 	<div class="masthead">
 		<h3>extended mind</h3>
 		<p>
-      <a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
+      <a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a> | <a href="/my">my</a>
 		</p>
 		<p>wlcm</p>
 	</div>
