Added error handling service and directive. Added url list directive. Removed global variables. Renamed ulrs requiring authentication with 'my' prefix and added authentication check into these routes' resolve function.  Refactored and validated frontend with JSLint.

--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -1,10 +1,10 @@
 <div class="span12">
-	<!-- Page Content -->
-	<div class="masthead">
-		<h3>extended mind</h3>
-		<p>
-      <a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a> | <a href="/my">my</a>
-		</p>
-		<p>wlcm</p>
-	</div>
+  <!-- Page Content -->
+  <div class="masthead">
+    <h3>extended mind</h3>
+    <p url-list></p>
+    <p>
+      wlcm
+    </p>
+  </div>
 </div>
