--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -2,9 +2,7 @@
 	<!-- Page Content -->
 	<div class="masthead">
 		<h3>extended mind</h3>
-		<p>
-			<a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
-		</p>
+		<p url-list></p>
 		<form name="searchAndAddOmniForm">
 			<input type="search" ng-model="item.title" autofocus="autofocus">
 			<button ng-click="putItem()">
