--- a/frontend/core/src/main/webapp/static/partials/pageNotFound.html
+++ b/frontend/core/src/main/webapp/static/partials/pageNotFound.html
@@ -1,10 +1,10 @@
 <div class="span12">
-	<!-- Page Content -->
-	<div class="masthead">
-		<h3>extended mind</h3>
-		<p>
-      <a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
-		</p>
-		<p>404 Not Found</p>
-	</div>
+  <!-- Page Content -->
+  <div class="masthead">
+    <h3>extended mind</h3>
+    <p url-list></p>
+    <p>
+      404 Not Found
+    </p>
+  </div>
 </div>
