--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,14 +1,21 @@
 <div class="span12">
-	<!-- Page Content -->
-	<div class="masthead">
-		<h3>extended mind</h3>
-		<p url-list></p>
-		<form name="searchAndAddOmniForm">
-			<input type="search" ng-model="item.title" autofocus="autofocus">
-			<button ng-click="putItem()">
-				+
-			</button>
-		</form>
-		<div item-list></div>
-	</div>
+  <!-- Page Content -->
+  <div class="masthead">
+    <h3>extended mind</h3>
+    <form name="searchAndAddOmniForm">
+      <input type="search" ng-model="item.title" autofocus="autofocus" placeholder="Search / Add">
+      <button ng-click="putItem()">
+        +
+      </button>
+    </form>
+
+    <div tasks-list tasksfilter="item.title">
+      <h4><a href="/mytasks">Tasks</a></h4>
+    </div>
+
+    <div notes-list notesfilter="item.title">
+      <h4><a href="/mynotes">Notes</a></h4>
+    </div>
+  </div>
+  <div error-alert-bar alertmessage="errorService.errorMessage"></div>
 </div>
