--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -21,6 +21,12 @@ li.em-header {
   padding-bottom: 20px;
 }
 
+ul
+{
+    list-style-type: none;
+    padding:0; margin:0;
+}
+
 .em-anchor {
   padding-top: 30px;
 }
