--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -1,4 +1,5 @@
 <div>
+  <div ng-transclude></div>
   <ul>
     <li ng-show="itemsListFilter" ng-repeat="item in items | filter:item">
       {{item.title}}
