--- a/frontend/core/src/main/webapp/static/partials/mytasks.html
+++ b/frontend/core/src/main/webapp/static/partials/mytasks.html
@@ -1,14 +1,24 @@
 <div class="span12">
-	<!-- Page Content -->
-	<div class="em-core">
-		<h3>extended mind <a href="/" class="em-subtitle">tasks</a></h3>
-		<p>
-			&nbsp;
-		</p>
-		<ul>
-			<li ng-repeat="item in items | userItems:filterArgument">
-				{{item.title}}
-			</li>
-		</ul>
-	</div>
+  <!-- Page Content -->
+  <div class="em-core">
+    <h3>extended mind <a href="/my" class="em-subtitle">tasks</a></h3>
+    <p>
+      &nbsp;
+    </p>
+    
+    <div>
+      <p>
+        inbox
+      </p>
+      <div tasks-list></div>
+    </div>
+    
+    <p>
+      projects
+    </p>
+
+    <p>
+      areas
+    </p>
+  </div>
 </div>
