--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -24,16 +24,15 @@ li.em-header {
 ul
 {
     list-style-type: none;
-    padding:0; margin:0;
 }
 
 .em-anchor {
   padding-top: 30px;
 }
-/* Use this to get a "light" Helvetica Neue
-body {
-  font-weight: 300;
-}*/
+// Use this to get a "light" Helvetica Neue
+// body {
+  // font-weight: 300;
+// }
 
 .done-true {
   text-decoration: line-through;
