--- a/frontend/core/src/main/webapp/static/partials/mytasks.html
+++ b/frontend/core/src/main/webapp/static/partials/mytasks.html
@@ -5,20 +5,14 @@
     <p>
       &nbsp;
     </p>
-    
-    <div>
-      <p>
-        inbox
-      </p>
-      <div tasks-list></div>
-    </div>
-    
-    <p>
-      projects
-    </p>
 
-    <p>
-      areas
-    </p>
+    <div>
+      <h4> inbox </h4>
+      <div tasksfilter="{{tasksListFilter}}" tasks-list></div>
+    </div>
+
+    <h4> projects </h4>
+
+    <h4> areas </h4>
   </div>
 </div>
