--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -21,9 +21,8 @@ li.em-header {
   padding-bottom: 20px;
 }
 
-ul
-{
-    list-style-type: none;
+ul {
+  list-style-type: none;
 }
 
 .em-anchor {
@@ -31,10 +30,10 @@ ul
 }
 // Use this to get a "light" Helvetica Neue
 // body {
-  // font-weight: 300;
+// font-weight: 300;
 // }
 
 .done-true {
   text-decoration: line-through;
-  color: grey;
+  color: gray;
 }
