--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -23,6 +23,7 @@
       <button ng-click="toggleItemsList()">
         Inbox
       </button>
+      <div new-items></div>
       <div ng-show="showMe" items-list itemsfilter="item.title"></div>
     </div>
 
