--- a/frontend/core/src/main/webapp/static/partials/mytasks.html
+++ b/frontend/core/src/main/webapp/static/partials/mytasks.html
@@ -7,12 +7,12 @@
     </p>
 
     <div>
-      <h4> inbox </h4>
+      <h4>inbox</h4>
       <div tasksfilter="{{tasksListFilter}}" tasks-list></div>
     </div>
 
-    <h4> projects </h4>
-
-    <h4> areas </h4>
+    <h4>projects</h4>
+    <h4>areas</h4>
+    <h4>tags</h4>
   </div>
 </div>
