--- a/frontend/core/src/main/webapp/static/partials/templates/newItems.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/newItems.html
@@ -1,7 +1,7 @@
 <div>
   <ul>
     <li ng-repeat="item in newItems">
-      <span class="done-{{todo.done}}">{{item.title}}</span>
+      {{item.title}}
       <div note-edit></div>
       <div task-edit></div>
     </li>
