--- a/frontend/core/src/main/webapp/static/partials/templates/tasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasksList.html
@@ -2,7 +2,7 @@
   <ul>
     <li ng-show="tasksListFilter" ng-repeat="task in tasks | filter:item">
       <input type="checkbox" ng-model="todo.done">
-      <span class="done-{{todo.done}}">{{task.title}}</span>
+      <a href="/mytasks/{{task.uuid}}"><span class="done-{{todo.done}}">{{task.title}}</span></a>
     </li>
   </ul>
 </div>
