New task button.

--- a/frontend/core/src/main/webapp/static/partials/mytasks.html
+++ b/frontend/core/src/main/webapp/static/partials/mytasks.html
@@ -1,10 +1,19 @@
 <div class="span12">
   <!-- Page Content -->
   <div class="em-core">
-    <h3>extended mind <a href="/my" class="em-subtitle">tasks</a></h3>
+
+    <div>
+      <h3><a href="/my" class="em-subtitle">tasks</a></h3>
+      <button ng-click="addNewTask()">
+        +
+      </button>
+    </div>
+
     <p>
       &nbsp;
     </p>
+
+    <div new-task></div>
 
     <div>
       <h4>inbox</h4>
