Html5 base routing fixes.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -10,12 +10,12 @@
     </form>
 
     <div>
-      <h4><a href="/mytasks" class="em-subtitle">tasks</a></h4>
+      <h4><a href="/my/tasks" class="em-subtitle">tasks</a></h4>
       <div tasks-list tasksfilter="item.title"></div>
     </div>
 
     <div>
-      <h4><a href="/mynotes" class="em-subtitle">notes</a></h4>
+      <h4><a href="/my/notes" class="em-subtitle">notes</a></h4>
       <div notes-list notesfilter="item.title"></div>
     </div>
 
