Renamed http and error service.

--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -27,5 +27,5 @@
       </form>
     </p>
   </div>
-  <div error-alert-bar alertmessage="errorService.errorMessage"></div>
+  <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
 </div>
