--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -28,5 +28,5 @@
     </div>
 
   </div>
-  <div error-alert-bar alertmessage="errorService.errorMessage"></div>
+  <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
 </div>
