--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -9,7 +9,7 @@
       <form name="login">
         <dl>
           <dt>
-            <input id="username" name="username" type="email" ng-model="user.username" placeholder="Email" required>
+            <input id="username" name="username" type="email" ng-model="user.username" placeholder="Email" autofocus="autofocus" required>
           </dt>
           <dt>
             <input id="password" name="password" type="password" ng-model="user.password" placeholder="Password" required>
