Added getItems http request into notes controller. Fixed note and task templates' list filter paramater.

--- a/frontend/core/src/main/webapp/static/partials/templates/notesList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/notesList.html
@@ -1,6 +1,6 @@
 <div>
   <ul>
-    <li ng-show="notesListFilter" ng-repeat="note in notes | filter:item">
+    <li ng-show="notesListFilter" ng-repeat="note in notes | filter:newItem">
       {{note.title}}
     </li>
   </ul>
