--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -6,6 +6,62 @@ a, .em-subtitle {
   border: 0 none;
 }
 
+button.addNew {
+  border: none;
+  background-color: white;
+}
+
+button.addNew:hover {
+  background-color: #D3D3D3;
+}
+
+.formContent {
+  border-color: gray;
+  border-style: solid;
+  border-width: 1px;
+  padding: 3px;
+}
+
+.formContent:hover {
+  border-color: black;
+}
+
+button.editItem {
+  border-color: #D3D3D3;
+  border-style: solid;
+  border-width: 1px;
+}
+
+button.editItem:hover {
+  border-color: gray;
+}
+
+button.formAction {
+  border-color: #D3D3D3;
+  border-style: solid;
+  border-width: 1px;
+}
+
+button.formAction:enabled:hover {
+  border-color: gray;
+}
+
+button.toggle {
+  border: none;
+  background: none;
+  color: gray;
+}
+
+button.toggle:hover {
+
+  border: none;
+  background: none;
+  text-decoration: underline;
+}
+
+form.newItem {
+}
+
 .masthead {
   padding-bottom: 50px;
   padding-top: 140px;
@@ -33,10 +89,6 @@ ul {
 .em-anchor {
   padding-top: 30px;
 }
-// Use this to get a "light" Helvetica Neue
-// body {
-// font-weight: 300;
-// }
 
 .done-true {
   text-decoration: line-through;
