Checkbox css styling.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,3 +1,19 @@
+input[type=checkbox] {
+  -webkit-appearance: none;
+  width: 13px;
+  height: 13px;
+  background: #D3D3D3;
+  border: 1px solid #dcdcdc;
+}
+
+input[type=checkbox]:checked {
+  background: #fff;
+}
+
+input[type=checkbox]:hover {
+  border-color: gray;
+}
+
 a, .em-subtitle {
   color: gray;
 }
