--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -2,16 +2,30 @@ input[type=checkbox] {
   -webkit-appearance: none;
   width: 13px;
   height: 13px;
-  background: #D3D3D3;
+  background: #fff;
   border: 1px solid #dcdcdc;
 }
 
 input[type=checkbox]:checked {
-  background: #fff;
+  background: #D3D3D3;
 }
 
 input[type=checkbox]:hover {
   border-color: gray;
+}
+
+input[type=radio] {
+  display: none;
+  margin: 10px;
+}
+
+input[type=radio] + label {
+  background-color: #e7e7e7;
+  border-color: #ddd;
+}
+
+input[type=radio]:checked + label {
+  background-color: #d0d0d0;
 }
 
 a, .em-subtitle {
