--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -4,7 +4,7 @@
     <h3>extended mind</h3>
 
     <form name="searchAndAddOmniForm">
-      <input type="search" ng-model="newItem.title" autofocus="autofocus" placeholder="Search / Add">
+      <input type="search" class="formContent"  ng-model="newItem.title" autofocus="autofocus" placeholder="Search / Add">
       <button type="button" class="addNew" ng-click="addNewItem()">
         +
       </button>
