--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -1,8 +1,9 @@
 <div>
   <div ng-transclude></div>
   <ul>
-    <li ng-show="itemsListFilter" ng-repeat="item in items | filter:newItem">
+    <li ng-repeat="item in items | filter:newItem">
       <div>
+
         <span>{{item.title}}</span>
 
         <button type="button" class="editItem" ng-click="editNewTag()">
@@ -18,8 +19,11 @@
         </button>
 
       </div>
+
       <div ng-show="showEditNewTag" new-tag></div>
+      <div ng-show="showEditNewNote" new-task></div>
       <div ng-show="showEditNewTask" new-task></div>
+
     </li>
   </ul>
 </div>
