--- a/frontend/core/src/main/webapp/static/partials/templates/tasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasksList.html
@@ -1,8 +1,13 @@
 <div>
+  <div ng-transclude ng-show="tasksListFilter"></div>
+
   <ul>
     <li ng-show="tasksListFilter" ng-repeat="task in tasks | filter:newItem">
-      <input type="checkbox" id="checkbox" ng-model="task.done" ng-change="taskChecked(task)">
-      <span class="done-{{task.done}}">{{task.title}}</span>
+
+      <input type="checkbox" id="checkbox" name="checkbox" ng-model="task.done" ng-change="taskChecked(task)">
+      <label class="done-{{task.done}}" for="checkbox">{{task.title}}</label>
+
     </li>
   </ul>
+
 </div>
