--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,35 +1,22 @@
-input[type=checkbox] {
-  -webkit-appearance: none;
-  width: 13px;
-  height: 13px;
-  background: #fff;
-  border: 1px solid #dcdcdc;
-}
-
-input[type=checkbox]:checked {
-  background: #D3D3D3;
-}
-
-input[type=checkbox]:hover {
-  border-color: gray;
-}
-
-input[type=radio] {
-  display: none;
-  margin: 10px;
-}
-
-input[type=radio] + label {
-  background-color: #e7e7e7;
-  border-color: #ddd;
-}
-
-input[type=radio]:checked + label {
-  background-color: #d0d0d0;
-}
-
 a, .em-subtitle {
   color: gray;
+}
+
+.em-subtitle {
+
+}
+
+.inlineblock {
+  display: inline-block;
+}
+
+label {
+  font-weight: normal;
+}
+
+#header {
+  vertical-align: bottom;
+  display: inline;
 }
 
 .accordion-group {
@@ -83,7 +70,6 @@ button.toggle {
 }
 
 button.toggle:hover {
-
   border: none;
   background: none;
   text-decoration: underline;
