--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -5,28 +5,25 @@
     <h3>extended mind <a href="/" class="em-subtitle">login</a></h3>
 
     <form name="login">
-      <dl>
+      <fieldset>
 
-        <dt>
+        <fieldset>
           <input class="formContent" id="username" name="username" type="email" ng-model="user.username" placeholder="Email" autofocus="autofocus" required>
-        </dt>
+        </fieldset>
 
-        <dt>
+        <fieldset>
           <input class="formContent" id="password" name="password" type="password" ng-model="user.password" placeholder="Password" required>
-        </dt>
+        </fieldset>
 
-        <dt>
+        <fieldset>
           <button class="formAction" id="loginbutton" name="loginbutton" type="submit" ng-disabled="!login.$valid" ng-click="userLogin()">
             login
           </button>
-        </dt>
+          <input type="checkbox" id="remember" name="checkbox" ng-model="user.remember">
+          <label for="checkbox" class="checkboxLabel">remember</label>
+        </fieldset>
 
-        <dt>
-          <span> remember </span>
-          <input type="checkbox" ng-model="user.remember">
-        </dt>
-
-      </dl>
+      </fieldset>
     </form>
 
     <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
