--- a/frontend/core/src/main/webapp/static/partials/my/notes.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes.html
@@ -1,18 +1,28 @@
 <div class="span12">
   <!-- Page Content -->
   <div class="em-core">
-    <h3>extended mind <a href="/my" class="em-subtitle">notes</a></h3>
-    <p>
-      &nbsp;
-    </p>
+
+    <div id="header">
+
+      <div class="inlineblock">
+        <h4><a href="/my" class="em-subtitle">notes</a></h4>
+      </div>
+
+      <div class="inlineblock">
+        <button type="button" class="addNew" ng-click="editNewNote()">
+          +
+        </button>
+      </div>
+
+    </div>
 
     <div>
-      <h4> inbox </h4>
+      <h4>inbox</h4>
       <div notesfilter="{{notesListFilter}}" notes-list></div>
     </div>
 
-    <h4> projects </h4>
+    <h4>projects</h4>
 
-    <h4> areas </h4>
+    <h4>areas</h4>
   </div>
 </div>
