--- a/frontend/core/src/main/webapp/static/partials/templates/notesList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/notesList.html
@@ -1,7 +1,10 @@
 <div>
+  <div ng-transclude ng-show="notesListFilter"></div>
+
   <ul>
     <li ng-show="notesListFilter" ng-repeat="note in notes | filter:newItem">
       {{note.title}}
     </li>
   </ul>
+
 </div>
