Added service to share item data between controllers.

--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -14,7 +14,7 @@
           note
         </button>
 
-        <button type="button" class="editItem">
+        <button type="button" class="editItem" ng-click="setActiveItem(item)">
           <a href="/my/tasks/new/{{item.uuid}}">task</a>
         </button>
 
