--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -1,7 +1,7 @@
 <div>
   <div ng-transclude></div>
   <ul>
-    <li ng-repeat="item in items | filter:newItem">
+    <li ng-repeat="item in items | filter:newItem" ng-model="activeItem">
       <div>
 
         <span>{{item.title}}</span>
@@ -15,7 +15,7 @@
         </button>
 
         <button type="button" class="editItem" ng-click="setActiveItem(item)">
-          <a href="/my/tasks/new/{{item.uuid}}">task</a>
+          task
         </button>
 
       </div>
