--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -21,7 +21,11 @@
       <div tasks-list tasksfilter="{{tasksListFilter}}"></div>
     </div>
 
-    <h4>projects</h4>
+    <div>
+      <h4>projects</h4>
+      <div projects-list></div>
+    </div>
+
     <h4>areas</h4>
 
     <div>
