--- a/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
@@ -3,7 +3,7 @@
   <ul>
     <li ng-repeat="context in tags">
 
-      <p ng-click="setActiveTag(context)">
+      <p ng-click="setActiveItem(context)">
         <a href="/my/tasks/context/{{context.uuid}}">@{{context.title}}</a>
       </p>
 
